aoc2024_11/rust/src/snapshots/aoc2024_11_rust__example_round_trip.snap
---
source: aoc2024_11/rust/src/main.rs
assertion_line: 244
expression: board
snapshot_kind: text
---
....#.....
.........#
..........
..#.......
.......#..
..........
.#..^.....
........#.
#.........
......#...
