aoc2024_11/rust/src/snapshots/aoc2024_11_rust__make_step_up.snap
---
source: aoc2024_11/rust/src/main.rs
assertion_line: 261
expression: board
snapshot_kind: text
---
....#.....
.........#
..........
..#.......
.......#..
....^.....
.#........
........#.
#.........
......#...
