aoc2024_11/rust/src/snapshots/aoc2024_11_rust__turn_right.snap
---
source: aoc2024_11/rust/src/main.rs
assertion_line: 295
expression: board
snapshot_kind: text
---
....#.....
.........#
..........
..#.......
.......#..
....#.....
.#..>.....
........#.
#.........
......#...
